manifest/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp1-frontend-service
spec:
  selector:
    type: myapp1-frontend
  type: NodePort
  ports:
  - port: 5004
    targetPort: 5004
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp1-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      type: myapp1-frontend
  template:
    metadata:
      labels:
        type: myapp1-frontend
    spec:
      containers:
      - name: myapp1-frontend-container
        image: 08521/mymongoapp2
        ports:
        - containerPort: 5004
