manifest/mongodb1.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-back-service2

  labels:
    type: mongo-backend-emp
spec:
  ports:
  - name: mongo-port1
    port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    type: mongo-backend1
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-back-deployment-emp
  
spec:
  selector:
    matchLabels:
      type: mongo-backend1
  serviceName: "mongo-back-deployment-emp"
  replicas: 1
  template:
    metadata:
      labels:
        type: mongo-backend1
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongo-back-container1
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-volume1
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-volume1
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
