manifest/ingress-emp.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: employee-management.info
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: myapp1-frontend-service
          servicePort: 5004
